<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    tools:context=".ui.connexion.ConnexionFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/erreurChargement"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="#FF0000"
            android:textSize="25sp"
            android:textAlignment="center"
            android:visibility="gone"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="23sp"
            android:layout_marginTop="10dp"
            android:textColor="@color/colorSecondary"
            android:textStyle="bold"
            android:gravity="center_horizontal"
            android:text="@string/se_connecter" />

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            app:cardElevation="10dp"
            app:cardCornerRadius="20dp"
            app:cardBackgroundColor="@color/white"
            app:cardMaxElevation="12dp"
            app:cardPreventCornerOverlap="true"
            app:cardUseCompatPadding="true">

            <EditText
                android:id="@+id/editTextPersonName"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_marginTop="20dp"
                android:ems="10"
                android:textSize="20sp"
                android:inputType="text"
                android:hint="@string/pseudo"
                android:background="@drawable/input"
                android:layout_marginHorizontal="30dp"
                android:paddingLeft="10dp"
                android:textColorHint="#878787"
                android:textColor="@color/black"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <EditText
                android:id="@+id/editTextPersonName2"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:ems="10"
                android:textSize="20sp"
                android:hint="@string/mot_de_passe"
                android:inputType="textPassword"
                android:layout_marginTop="90dp"
                android:background="@drawable/input"
                android:layout_marginHorizontal="30dp"
                android:paddingLeft="10dp"
                android:textColor="@color/black"
                android:textColorHint="#878787"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/editTextTextPersonName" />

            <Button
                android:id="@+id/buttonLogin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="170dp"
                android:layout_marginBottom="10dp"
                android:text="@string/connexion"
                android:textColor="@color/white"
                android:background="@drawable/back"
                android:layout_gravity="center_horizontal"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.498"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/editTextTextPersonName2" />

        </androidx.cardview.widget.CardView>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal">

            <View
                android:layout_width="120dp"
                android:layout_height="2dp"
                android:background="@color/black"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/ou"
                android:textStyle="bold"
                android:textSize="25sp"
                android:textColor="@color/black"
                android:layout_marginHorizontal="10dp"/>

            <View
                android:layout_width="120dp"
                android:layout_height="2dp"
                android:background="@color/black"/>

        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="23sp"
            android:layout_marginTop="20dp"
            android:textColor="@color/colorSecondary"
            android:textStyle="bold"
            android:gravity="center_horizontal"
            android:text="@string/cr_er_un_compte" />

        <androidx.cardview.widget.CardView
            android:id="@+id/createAccountCard"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:visibility="visible"
            app:cardElevation="10dp"
            app:cardCornerRadius="20dp"
            app:cardBackgroundColor="@color/white"
            app:cardMaxElevation="12dp"
            app:cardPreventCornerOverlap="true"
            app:cardUseCompatPadding="true">

            <EditText
                android:id="@+id/editTextPseudo"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_marginTop="20dp"
                android:ems="10"
                android:textSize="20sp"
                android:inputType="text"
                android:hint="@string/cr_er_un_compte"
                android:background="@drawable/input"
                android:layout_marginHorizontal="30dp"
                android:paddingLeft="10dp"
                android:textColorHint="#878787"
                android:textColor="@color/black"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <EditText
                android:id="@+id/editTextPassword"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:ems="10"
                android:textSize="20sp"
                android:hint="@string/mot_de_passe"
                android:inputType="textPassword"
                android:layout_marginTop="90dp"
                android:background="@drawable/input"
                android:layout_marginHorizontal="30dp"
                android:paddingLeft="10dp"
                android:textColor="@color/black"
                android:textColorHint="#878787"
                app:layout_constraintTop_toBottomOf="@+id/editTextTextPersonName"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent" />

            <EditText
                android:id="@+id/editTextPasswordConfirm"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:ems="10"
                android:textSize="20sp"
                android:hint="@string/confirmer"
                android:inputType="textPassword"
                android:layout_marginTop="160dp"
                android:background="@drawable/input"
                android:layout_marginHorizontal="30dp"
                android:paddingLeft="10dp"
                android:textColor="@color/black"
                android:textColorHint="#878787"
                app:layout_constraintTop_toBottomOf="@+id/editTextTextPassword"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent" />

            <Button
                android:id="@+id/buttonCreateAccount"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/cr_er_un_compte"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="240dp"
                android:layout_marginBottom="10dp"
                android:background="@drawable/back"
                app:layout_constraintTop_toBottomOf="@+id/editTextTextPasswordConfirm"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent" />

        </androidx.cardview.widget.CardView>

    </LinearLayout>

</ScrollView>